@@ -80,6 +80,9 @@ public class LoadFilterServiceSqlMap extends AbstractSqlMap {
 "delete from $(load_filter) where   " + 
 "  load_filter_id=? " );
 
+        putSql("selectMaxLastUpdateTime" ,"" + 
+"select max(last_update_time) from $(load_filter) where last_update_time is not null" );     
+        
         // @formatter:on
 
     }
